# zero2prod

./: Cargo.toml  Dockerfile  docker-compose.yaml
.sqlx/: query-1a5d803cc21dcd70e8f1f5451a9a525afbe8438ae434c8390864bbba84317873.json  query-a718120050a7f9589a8c4e106b39f31c1770cce9aa675a901f76fdbf149e5cf5.json  query-ac4389c8d06566d87d1712e682e9915a26c73bd7800634dbb1895233e0fc7018.json
configuration/: base.yaml
migrations/: 20250331113959_create_users_table.sql  20250402125313_remove_salt_from_users.sql  20250504073444_seed_user.sql
src/: configuration.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/routes/: mod.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  main.rs  newsletter.rs
